Fixing margins, spacings and paddings

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,37 @@
 html {
-  font-size: 30px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  font-family: roboto-slab, serif;
+  background-color: darkgray;
+}
+
+body {
+  width: 600px;
+  margin: 30px auto;
+  background-color: white;
+  padding: 0px 20px 20px 20px;
+  border: 5px solid black;
 }
 
 h1 {
   text-align: center;
-  font-size: 60px;
+  font-family: amatic-sc, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  text-shadow: 1px 1px 1px grey;
+  margin: 0;
+  padding: 20px 0;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+p {
+  padding: 10px;
+}
+p,
+li {
+  font-size: 16px;
+  line-height: 2;
+  letter-spacing: 1px;
 }
